--- a/style.css
+++ b/style.css
@@ -1,3 +1,30 @@
+:root{
+    --background:    #292d3e;
+    --foreground:	#959dcb;
+    --comment:	#676e95;
+    --accent:	#c3e88d;
+    --redish:	#ff5370;
+    --orangish:	#f78c6c;
+    --yellowish:	#ffcb6b;
+    --greenish:	#c3e88d;
+    --bluish:	#82aaff;
+    --purplish:	#c792ea;
+}
+
 body {
+    
+    background-color: var(--background);
+    color: var(--foreground);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     font-family: 'Nunito Sans', sans-serif;
+}
+.title{
+    margin: .5em;
+    font-size: 4em;
+    font-weight: lighter;
+    letter-spacing: .05em;
+
 }
